# MagicalClip

./: README.md  client.py  p2p.py  package-lock.json  package.json  server.py
PythonSandbox/: p2p.py  server.py
src/: App.css  App.tsx  ClipboardHistoryCard.css  ClipboardHistoryCard.tsx  bindings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clipboard.rs  config.rs  main.rs  tcp.rs
