[package]
name = "magical-clip"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "clipboard-all", "dialog-open", "dialog-save", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "1"
tauri-specta = { version = "1", features = ["javascript", "typescript"] }
tokio = { version = "1", features = ["full"] }
arboard = "3.4.0"
lazy_static = "1.4.0"
chrono = "0.4.38"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
